<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tipPercent">Tip Percentage</string>
    <string name="Bill">Bill</string>
    <string name="totalBill">Total</string>
    <string name="calculate">Calculate</string>
    <string name="slideTextView">Slide to increase or decrease tip</string>

</resources>
